no space wrap on button text, application detail header fix

--- a/alcs-frontend/src/app/shared/application-header/application-header.component.scss
+++ b/alcs-frontend/src/app/shared/application-header/application-header.component.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    line-height: 32px;
   }
 
   .labels {
