--- a/alcs-frontend/src/styles/buttons.scss
+++ b/alcs-frontend/src/styles/buttons.scss
@@ -117,8 +117,12 @@
   background-color: rgba($grey, 0.2);
 }
 
-::ng-deep .mdc-button {
+button.mdc-button {
   font-weight: 700 !important;
   line-height: 32px !important;
   text-transform: uppercase;
+
+  .mdc-button__label {
+    white-space: nowrap;
+  }
 }
